bug fix for html menus

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
@@ -10,8 +10,17 @@
 /* Styles needed to counter the hn style
 ------------------------------------------------*/
 
-.hn_sld_menu li { margin-left: 0; text-align:left}
-.hn_sld_menu a { text-decoration: none; }
+.hn_sld_menu li
+{
+  margin-left: 0;
+  text-align:left
+  }
+
+.hn_sld_menu a
+{
+  text-decoration: none;
+  }
+
 /*----------------------------------------------------------------*/
 
 /**********************************************
@@ -22,7 +31,11 @@ Style 1 (generic)
 
 /* body and reset declarations
 ---------------------------------------*/
-body { color: #3f3f3f; font-family: Verdana, Geneva, sans-serif; }
+body
+{
+  color: #3f3f3f;
+  font-family: Verdana, Geneva, sans-serif;
+  }
 
 /**********************************************
 
@@ -35,21 +48,35 @@ Crumbs
 Menu
 
 **********************************************/
-.hn_sld_menu, .hn_sld_menu ul { padding: 0px; }
+.hn_sld_menu, .hn_sld_menu ul
+{
+  padding: 0px;
+  }
 
-.hn_sld_menu a { border: none;}
-.hn_sld_menu, .hn_sld_menu ul { height: 60px; list-style-type: none;text-align: left; }
-.hn_sld_menu li {
-    float: left;
-	background-color: #3f3f3f;
-	border : 1px solid #dedede;
-	background-color: #3f3f3f;
-  	box-shadow: 0 3px 3px #AAAAAA;
-	height: auto;
-	color: #dedede;
-	padding: 8px 16px;
-	-moz-box-shadow: 0 3px 3px #AAAAAA;
-  	-webkit-box-shadow: 0 3px 3px #AAAAAA;
+.hn_sld_menu a
+{
+  border: none;
+}
+
+.hn_sld_menu, .hn_sld_menu ul
+{
+  height: 60px;
+  list-style-type:
+  none;text-align: left;
+}
+
+.hn_sld_menu li
+{
+  float: left;
+  background-color: #3f3f3f;
+  border : 1px solid #dedede;
+  background-color: #3f3f3f;
+  box-shadow: 0 3px 3px #AAAAAA;
+  height: auto;
+  color: #dedede;
+  padding: 8px 16px;
+  -moz-box-shadow: 0 3px 3px #AAAAAA;
+  -webkit-box-shadow: 0 3px 3px #AAAAAA;
 }
 
 .hn_sld_menu li a:link, .hn_sld_menu li a:visited {
@@ -60,55 +87,169 @@ Menu
 	border: none;
 }
 
-.hn_sld_menu li a:hover { color: #999; }
-.hn_sld_menu li ul { left:-8000px; position: absolute; }
-.hn_sld_menu li:hover  {position:relative; z-index:100; border-bottom: 2px solid #999;}
-.hn_sld_menu li:hover ul { left: 0; top: 37px; background-color: #3f3f3f; }
+.hn_sld_menu li a:hover
+{
+  color: #999;
+  }
+
+.hn_sld_menu li ul
+{
+  left:-8000px;
+  position: absolute;
+}
+
+.hn_sld_menu li:hover
+{
+  position:relative;
+  z-index:100;
+  border-bottom: 2px solid #999;
+  }
+
+.hn_sld_menu li:hover ul
+{
+  left: 0;
+  top: 33px;
+  background-color: #3f3f3f;
+  }
 
 
-.hn_sld_menu li ul {
-	-moz-box-shadow: 0 3px 3px #AAAAAA;
-  	-webkit-box-shadow: 0 3px 3px #AAAAAA;
-  	box-shadow: 0 3px 3px #AAAAAA;
+.hn_sld_menu li ul
+{
+  -moz-box-shadow: 0 3px 3px #AAAAAA;
+  -webkit-box-shadow: 0 3px 3px #AAAAAA;
+  box-shadow: 0 3px 3px #AAAAAA;
 	height: auto;
 	width:10em;
 }
 
-.hn_sld_menu li:hover ul li { display: block; border-right: none; border-top:none; border-bottom: 1px solid #DEDEDE; width: 100%; -moz-box-shadow: none; -webkit-box-shadow: none;box-shadow: none;}
-.hn_sld_menu ul li:hover { border-bottom: 1px solid #999; }
-.hn_sld_menu ul li {text-align: left; padding: 6px 30px 6px 6px; width: 12em; border-bottom: none;}
+.hn_sld_menu li:hover ul li
+{
+  display: block;
+  border-right: none;
+  border-top:none;
+  border-bottom: 1px solid #DEDEDE;
+  width: 100%;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
-.hn_sld_menu ul li a:link, .hn_sld_menu ul li a:visited {
-text-align: left; display: block}
+.hn_sld_menu ul li:hover
+{
+  border-bottom: 1px solid #999;
+  }
 
-.hn_sld_menu ul.first_level ul { background-color: orange; position:absolute; left: -8000px; top: 0;}
-.hn_sld_menu li:hover { background-color: #4F4F4F;}
+.hn_sld_menu ul li
+{
+  text-align: left;
+  padding: 6px 30px 6px 6px;
+  width: 12em;
+  border-bottom: none;
+}
 
-.hn_sld_menu ul.first_level li:hover > ul { left:100%;}
+.hn_sld_menu ul li a:link, .hn_sld_menu ul li a:visited
+{
+  text-align: left;
+  display: block
+  }
+
+.hn_sld_menu ul.first_level ul
+{
+  background-color: orange;
+  position:absolute;
+  left: -8000px;
+  top: 0;
+  }
+
+.hn_sld_menu li:hover
+{
+  background-color: #4F4F4F;
+  }
+
+.hn_sld_menu ul.first_level li:hover > ul
+{
+  left:100%;
+  }
 
 /**********************************************
 
 Horizontal Line
 
 **********************************************/
-div hr.hn_sld_hr { margin: 10px auto 0; height: 2px; border: none; background: #3f3f3f; }
+div hr.hn_sld_hr
+{
+  margin: 10px auto 0;
+  height: 2px;
+  border: none;
+  background: #3f3f3f;
+  }
 
 /**********************************************
 
 Alert box
 
 **********************************************/
-div.hn_sld_alert { border: 1px solid #3f3f3f;;}
-div.hn_sld_alert h4, div.hn_sld_alert h6 { background-color: #f6f6f6; padding: 11px;  margin: 0; overflow: hidden;}
-div.hn_sld_alert h4 { border-bottom: 1px solid #999; font-size: 1.5em; background: #f6f6f6 url("/img/alert_0.png") no-repeat right center;}
-div.hn_sld_alert p { margin: 11px; font-size: 1em;}
-div.hn_sld_alert h6 { padding: 11px; font-size:0.95em; border-top: 1px solid #999999;}
+div.hn_sld_alert
+{
+  border: 1px solid #3f3f3f;
+  }
 
-div.hn_sld_level1 h4 { background-image: url("/img/alert_1.png");}
-div.hn_sld_level2 { border-color: #F5993D;}
-div.hn_sld_level2 h4 { color: #F5993D; background-image: url("/img/alert_2.png"); border-color: #F5993D}
-div.hn_sld_level3 { border-color: #AD3333;}
-div.hn_sld_level3 h4 { color: #AD3333; border-color: #AD3333; background-image: url("/img/alert_3.png");}
+div.hn_sld_alert h4, div.hn_sld_alert h6
+{
+  background-color: #f6f6f6;
+  padding: 11px;
+  margin: 0;
+  overflow: hidden;
+}
+
+div.hn_sld_alert h4
+{
+  border-bottom: 1px solid #999;
+  font-size: 1.5em;
+  background: #f6f6f6 url("/img/alert_0.png") no-repeat right center;
+  }
+
+div.hn_sld_alert p
+{
+  margin: 11px;
+  font-size: 1em;
+}
+
+div.hn_sld_alert h6
+{
+  padding: 11px;
+  font-size:0.95em;
+  border-top: 1px solid #999999;
+}
+
+div.hn_sld_level1 h4
+{
+  background-image: url("/img/alert_1.png");
+  }
+
+div.hn_sld_level2
+{
+  border-color: #F5993D;
+  }
+
+div.hn_sld_level2 h4
+{
+  color: #F5993D;
+  background-image: url("/img/alert_2.png");
+  border-color: #F5993D
+  }
+
+div.hn_sld_level3
+{
+  border-color: #AD3333;
+  }
+
+div.hn_sld_level3 h4
+{
+  color: #AD3333;
+  border-color: #AD3333;
+  background-image: url("/img/alert_3.png");
+  }
 
 
 /**********************************************
@@ -116,62 +257,152 @@ div.hn_sld_level3 h4 { color: #AD3333; border-color: #AD3333; background-image: 
 Box standard
 
 **********************************************/
-div.hn_sld_box { border: 1px solid #3f3f3f; text-align:left;}
-div.hn_sld_box h4 { border-bottom: 1px solid #999; font-size: 1.5em; display: block; padding: 11px 0px; margin: 0 11px;}
-div.hn_sld_box div { margin:0 11px; }
-div.hn_sld_box p { margin: 11px; font-size: 1em; clear:both;}
-div.hn_sld_box h6 {font-size: 0.95em; display: block; padding: 10px 0 11px; margin: 0 11px; border-top: 1px solid #999;}
+div.hn_sld_box
+{
+  border: 1px solid #3f3f3f;
+  text-align:left;
+  }
 
+div.hn_sld_box h4
+{
+  border-bottom: 1px solid #999;
+  font-size: 1.5em;
+  display: block;
+  padding: 11px 0px;
+  margin: 0 11px;
+  }
+
+div.hn_sld_box div
+{
+  margin:0 11px;
+  }
+
+div.hn_sld_box p
+{
+  margin: 11px;
+  font-size: 1em;
+  clear:both;
+  }
+
+div.hn_sld_box h6
+{
+  font-size: 0.95em;
+  display: block;
+  padding: 10px 0 11px;
+  margin: 0 11px;
+  border-top: 1px solid #999;
+  }
 
 /**********************************************
 
 Headline
 
 **********************************************/
-h3.hn_sld_headline { border-bottom: 2px solid #3f3f3f; font-size: 2.2em; display: inline-block; padding-bottom: 3px; text-align:left;}
-
+h3.hn_sld_headline
+{
+  border-bottom: 2px solid #3f3f3f;
+  font-size: 2.2em;
+  display: inline-block;
+  padding-bottom: 3px;
+  text-align:left;
+}
 
 /**********************************************
 
 Plainbox
 
 **********************************************/
-div.hn_sld_plainbox { padding: 11px 0; text-align:left;}
-div.hn_sld_plainbox h4 {font-size: 1.5em; display: block;}
-div.hn_sld_plainbox p { margin: 22px auto; font-size: 1em; clear:both;}
-div.hn_sld_plainbox h6 {font-size:0.95em; padding-top: 11px}
+div.hn_sld_plainbox
+{
+  padding: 11px 0;
+  text-align:left;
+  }
 
+div.hn_sld_plainbox h4
+{
+  font-size: 1.5em;
+  display: block;
+  }
+
+div.hn_sld_plainbox p
+{
+  margin: 22px auto;
+  font-size: 1em;
+  clear:both;
+  }
+
+div.hn_sld_plainbox h6
+{
+  font-size:0.95em;
+  padding-top: 11px
+  }
 
 /**********************************************
 
 Ruledbox
 
 **********************************************/
-div.hn_sld_ruledbox { padding: 11px 0; text-align:left; border: 1px solid #3F3F3F;}
-div.hn_sld_ruledbox h4 {font-size: 1.5em; display: block; border-bottom: 1px solid #999;margin: 0 11px; padding: 11px 0 }
-div.hn_sld_ruledbox p { margin: 11px; font-size: 1em; clear:both;}
-div.hn_sld_ruledbox h6 {font-size: 0.95em; padding: 11px; border-top 1px solid #999999;}
+div.hn_sld_ruledbox
+{
+  padding: 11px 0;
+  text-align:left;
+  border: 1px solid #3F3F3F;
+}
 
+div.hn_sld_ruledbox h4
+{
+  font-size: 1.5em;
+  display: block;
+  border-bottom: 1px solid #999;
+  margin: 0 11px;
+  padding: 11px 0
+  }
+
+div.hn_sld_ruledbox p
+{
+  margin: 11px;
+  font-size: 1em;
+  clear:both;
+  }
+
+div.hn_sld_ruledbox h6
+{
+  font-size: 0.95em;
+  padding: 11px;
+  border-top 1px solid #999999;
+  }
 
 /**********************************************
 
 Vertical Line
 
 **********************************************/
-div.hn_sld_vertline { width: 2px; background-color: #3f3f3f; min-height: 100px; height: auto; height: 100%; margin: 0 auto;}
+div.hn_sld_vertline
+{
+  width: 2px;
+  background-color: #3f3f3f;
+  min-height: 100px;
+  height: auto;
+  height: 100%;
+  margin: 0 auto;
+  }
 
 /**********************************************
 
 Table
 
 **********************************************/
-/*****************
+
+/**********************************************
 
 Fixes for underline
 
-****************************/
+**********************************************/
 
-#ctrlpanel a:link, #ctrlpanel a:visited { border-bottom: none }
+#ctrlpanel a:link, #ctrlpanel a:visited
+{
+  border-bottom: none
+  }
 
 
 /**********************************************
@@ -180,29 +411,122 @@ Tabs
 
 **********************************************/
 
-.ui-tabs { position: relative; padding: .2em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
-.ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; border-bottom: 0 !important; padding: 0; white-space: nowrap; margin-left: -1px; }
+.ui-tabs
+{
+  position: relative;
+  padding: .2em; zoom: 1;
+  }
+/* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 
-.ui-tabs .ui-tabs-nav li a { float: left; padding: 6px 12px; text-decoration: none; }
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; }
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
-.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
-.ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; z-index: 0}
-.ui-tabs .ui-tabs-hide { display: none !important; }
+.ui-tabs .ui-tabs-nav li
+{
+  list-style: none;
+  float: left;
+  position: relative;
+  border-bottom: 0 !important;
+  padding: 0;
+  white-space: nowrap;
+  margin-left: -1px;
+  }
 
-.hn_sld_tabs { border: 1px solid #3f3f3f;padding: 0; margin: 0}
-.hn_sld_tabs ul { height:37px; border-bottom: 4px solid #3f3f3f;  padding: 0; margin: 0 }
-.hn_sld_tabs ul li { float: left;}
+.ui-tabs .ui-tabs-nav li a
+{
+  float: left;
+  padding: 6px 12px;
+  text-decoration: none;
+  }
 
-.hn_sld_tabs ul a:link, #hn_sld_tabs ul a:visited { border: none; display:block; background-color: #fff; color: #3f3f3f; border-left: 1px solid #3f3f3f; margin: 4px 0; font-size: 1.5em;}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected
+{
+  margin-bottom: 0;
+  }
 
-.hn_sld_tabs ul li.ui-tabs-selected { }
-.hn_sld_tabs ul li.ui-tabs-selected a { color: #fff; background-color: #3f3f3f;}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a
+{
+  cursor: text;
+  }
+
+.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a
+{
+  cursor: pointer;
+  }
+/* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
+
+.ui-tabs .ui-tabs-panel
+{
+  display: block;
+  border-width: 0;
+  padding: 1em 1.4em;
+  background: none;
+  z-index: 0
+  }
+
+.ui-tabs .ui-tabs-hide
+{
+  display: none !important;
+  }
+
+.hn_sld_tabs
+{
+  border: 1px solid #3f3f3f;
+  padding: 0;
+  margin: 0
+  }
+
+.hn_sld_tabs ul
+{
+  height:37px;
+  border-bottom: 4px solid #3f3f3f;
+  padding: 0;
+  margin: 0
+  }
+
+.hn_sld_tabs ul li
+{
+  float: left;
+  }
+
+.hn_sld_tabs ul a:link, #hn_sld_tabs ul a:visited
+{
+  border: none;
+  display:block;
+  background-color: #fff;
+  color: #3f3f3f;
+  border-left: 1px solid #3f3f3f;
+  margin: 4px 0;
+  font-size: 1.5em;
+  }
+
+.hn_sld_tabs ul li.ui-tabs-selected
+{
+  }
+
+.hn_sld_tabs ul li.ui-tabs-selected a
+{
+  color: #fff;
+  background-color: #3f3f3f;
+  }
 
 /* Extra for more accurate style */
-.hn_sld_tabs { border: none}
-.hn_sld_tabs ul { border: 1px solid #3f3f3f; margin-bottom: 0px;  }
-.ui-tabs  .ui-tabs-panel { border-width: 1px; border-color: #3f3f3f; border-style: solid; border-top-width: 4px;}
+.hn_sld_tabs
+{
+  border: none
+  }
+
+.hn_sld_tabs ul
+{
+  border: 1px solid #3f3f3f;
+  margin-bottom: 0px;
+  }
+
+.ui-tabs  .ui-tabs-panel
+{
+  border-width: 1px;
+  border-color: #3f3f3f;
+  border-style: solid;
+  border-top-width: 4px;
+  }
+
 .hn_sld_tabs ul li.ui-tabs-selected a {
     background-color: #3F3F3F;
     color: #DEDEDE;
@@ -211,25 +535,51 @@ Tabs
 	padding-bottom: 14px;;*/;
 }
 
-.hn_sld_tabs ul.ui-tabs-nav { height: 53px}
+.hn_sld_tabs ul.ui-tabs-nav
+{
+  height: 53px;
+  }
 
-.hn_sld_tabs ul.ui-tabs-nav li a { padding: 11px;}
+.hn_sld_tabs ul.ui-tabs-nav li a
+{
+  padding: 11px;
+  }
 
-.hn_sld_tabs ul.ui-tabs-nav a:link, #hn_sld_tabs ul.ui-tabs-nav a:visited { margin: 0;}
-.hn_sld_tabs ul.ui-tabs-nav a:hover { color: #7f7f7f;}
+.hn_sld_tabs ul.ui-tabs-nav a:link, #hn_sld_tabs ul.ui-tabs-nav a:visited
+{
+  margin: 0;
+  }
+
+.hn_sld_tabs ul.ui-tabs-nav a:hover
+{
+  color: #7f7f7f;
+  }
+
 .hn_sld_tabs ul li {
     float: left;
     overflow: hidden;
 }
-.hn_sld_tabs ul li.ui-tabs-selected a:hover { color: #fff}
-
-.hn_sld_tabs div.ui-tabs-panel { padding: 0; overflow: auto;}
-.hn_sld_tabs div.ui-tabs-panel p {
-	font-size: 1em;
-    margin: 11px;
+.hn_sld_tabs ul li.ui-tabs-selected a:hover
+{
+  color: #fff
 }
 
-.hn_sld_tabs div.ui-tabs-panel img { margin: 0 }
+.hn_sld_tabs div.ui-tabs-panel
+{
+  padding: 0;
+  overflow: auto;
+  }
+
+.hn_sld_tabs div.ui-tabs-panel p
+{
+  font-size: 1em;
+  margin: 11px;
+  }
+
+.hn_sld_tabs div.ui-tabs-panel img
+{
+  margin: 0
+  }
 
 
 /********************************
@@ -238,14 +588,29 @@ FIXES MAY BE FOR DELETE
 
 ******************************************/
 
-div.hn_sld_alert, div.hn_sld_box, div.hn_sld_plainbox, div.hn_sld_ruledbox { margin: 0; padding: 0; height: auto;}
+div.hn_sld_alert, div.hn_sld_box, div.hn_sld_plainbox, div.hn_sld_ruledbox
+{
+  margin: 0;
+  padding: 0;
+  height: auto;
+}
 
-div.hn_sld_alert h4, div.hn_sld_plainbox h4, div.hn_sld_ruledbox h4 {margin: 0;  padding: 11px; display: block; }
+div.hn_sld_alert h4, div.hn_sld_plainbox h4, div.hn_sld_ruledbox h4
+{
+  margin: 0;
+  padding: 11px;
+  display: block;
+  }
 
+div.hn_sld_alert div, div.hn_sld_box div, div.hn_sld_plainbox div, div.hn_sld_ruledbox div
+{
+  overflow: auto;
+  }
 
-div.hn_sld_alert div, div.hn_sld_box div, div.hn_sld_plainbox div, div.hn_sld_ruledbox div { overflow: auto;}
-
-.hn_sld_footer { height: 11px; }
+.hn_sld_footer
+{
+  height: 11px;
+  }
 
 /* Fix up for ordered lists */
 div.hn_sld_tabs div ul
