--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -519,6 +519,7 @@ input[type=submit].hninput:hover {
 
 .hn_newuserfeedback
 {
+  line-height: 0.9 !important;
   margin: 0;
   font-size: 80%;
   }
