--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -565,10 +565,16 @@
         <a id="hn_makewikiselectclose">x</a>
           <p id="hn_makewikiselectblurb">This dialog box will replace the cell
           <span id="hn_wikiselectcell"></span> with a select (dropdown) box.</p>
-          <p>You can either type the values you want to put into the select box
-          separated by commas, or put in a cell or range like './a1',
-          '/some/page/b2:c7' or a z-query like '../[a1>3]/b2:b4'.
-          To delete a select box just clear the values
+          You can:
+          <ul>
+            <li>type the values you want to put into the select box
+          separated by commas</li>
+          <li>put in a cell or range like <span class='hn_code'>./a1</span>
+          or <span class='hn_code'>/some/page/b2:c7</span></li>
+          <li>use a z-query like
+          <span class='hn_code'>../[a1>3]/b2:b4</span</li>
+          </ul>
+          <p>To delete a select box just clear the values
           and save.</p>
           <input type="text" id="hn_insertwikiselect" />
           <input type="button", id="hn_wikiselectsubmit" class="button" value="Save" />
