--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -1,88 +1,119 @@
-<!DOCTYPTE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Vixo Softphone</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/bootstrap/css/helper.css" />
-    <style type="text/css">
-      .hn_phone {
-      font-family: monospace;
-      font-size: 190%;
-      margin-bottom: 3px;
-      }
-      #hn_phone_panel {
-      vertical-align: top;
-      padding: 20px;
-      }
-      #hn_phone_page {
-      width: 100%;
-      height: 100%;
-      }
-      #hn_phone_number {
-      width: 116px;
-      margin-bottom: 6px;
-      }
-      table {
-      border: 1px solid #f66;
-      height: 100%;
-      }
-      iframe {
-      height: inherit;
-      width: inherit;
-      }
-      .hn_phone_status {
-      text-align: center;
-      color: #999;
-      margin-bottom: 3px;
-      }
-      #hn_phone_buttons {
-      margin-bottom: 3px;
-      }
-      #hn_phone_controls {
-      margin-bottom: 3px;
-      }
+    <link rel="stylesheet" href="/contacts/hn.phone2.css" />
     </style>
 </head>
 <body>
   <table>
     <tr>
       <td id='hn_phone_panel'>
-        <div class='hn_phone_status'>On The Hook</div>
+        <div id='hn_phone_dialpad'>
+        <div id='hn_phone_status' class='hn_phone_display'>On The Hook</div>
+        <div>Member of Groups...</div>
+        <div>User Name</div>
+        <textarea id='hn_phone_number' type='textarea' disabled></textarea>
+        <textarea id='hn_phone_text' type='textarea' disabled></textarea>
         <div id='hn_phone_controls'>
-          <button class='btn btn-success hn_phone' id='hn_phone_dial'>
-            <i class='icon-play-circle'></i>
+          <button class='btn btn-success hn_phone_control' id='hn_phone_dial' disabled>
+            Dial
           </button>
-          <button class='btn hn_phone' id='hn_phone_suspend'>
-            <i class='icon-ban-circle'></i>
+          <button class='btn btn-danger hn_phone_control' id='hn_phone_hangup' disabled>
+            Hangup
           </button>
-          <button class='btn btn-danger hn_phone' id='hn_phone_hangup' disabled>
-            <i class='icon-remove-circle'></i>
+          <br />
+          <button class='btn btn-invert hn_phone_control' id='hn_phone_away' disabled>
+            Away
+          </button>
+          <button class='btn hn_phone_control' id='hn_phone_sms' disabled disabled>
+            Text
           </button>
         </div>
+        <div id='hn_phone_buttons'>
+        <button class='btn hn_phone' data-button='1' disabled>1</button>
+        <button class='btn hn_phone' data-button='2' disabled>2</button>
+        <button class='btn hn_phone' data-button='3' disabled>3</button>
+        <br />
+        <button class='btn hn_phone' data-button='4' disabled>4</button>
+        <button class='btn hn_phone' data-button='5' disabled>5</button>
+        <button class='btn hn_phone' data-button='6' disabled>6</button>
+        <br />
+        <button class='btn hn_phone' data-button='7' disabled>7</button>
+        <button class='btn hn_phone' data-button='8' disabled>8</button>
+        <button class='btn hn_phone' data-button='9' disabled>9</button>
+        <br />
+        <button class='btn hn_phone' data-button='plus' disabled>+</button>
+        <button class='btn hn_phone' data-button='0' disabled>0</button>
+        <button class='btn hn_phone' data-button='comma' disabled>,</button>
         </div>
-        <input id='hn_phone_number' type='text' />
-        <button class='btn hn_phone' id='hn_phone_1'>1</button>
-        <button class='btn hn_phone' id='hn_phone_2'>2</button>
-        <button class='btn hn_phone' id='hn_phone_3'>3</button>
-        <br />
-        <button class='btn hn_phone' id='hn_phone_4'>4</button>
-        <button class='btn hn_phone' id='hn_phone_5'>5</button>
-        <button class='btn hn_phone' id='hn_phone_6'>6</button>
-        <br />
-        <button class='btn hn_phone' id='hn_phone_7'>7</button>
-        <button class='btn hn_phone' id='hn_phone_8'>8</button>
-        <button class='btn hn_phone' id='hn_phone_9'>9</button>
-        <br />
-        <button class='btn hn_phone' id='hn_phone_star'>*</button>
-        <button class='btn hn_phone' id='hn_phone_0'>0</button>
-        <button class='btn hn_phone' id='hn_phone_hash'>#</button>
+        </div>
+        <div id='hn_phone_email'>
+          <div class='hn_phone_display'>Send Email</div>
+          <div>
+          <span class='hn_phone_email_label'>To:</span>
+          <input id='hn_phone_to' class='hn_phone_email_input' type='text' />
+          </div>
+          <div class='clear'>
+          <span class='hn_phone_email_label'>CC:</span>
+          <input id='hn_phone_cc' class='hn_phone_email_input' type='text' />
+          </div>
+          <div class='clear'>
+          <span class='hn_phone_email_label'>BCC:</span>
+          <input id='hn_phone_bcc' class='hn_phone_email_input' type='text' />
+          </div>
+          <input id='hn_phone_subject' class='hn_phone_email_subject' type='text' />
+          <textarea id='hn_phone_body' class='hn_phone_email_body' type='textarea'></textarea>
+        </div>
       </td>
-      <td id='hn_phone_page'><iframe src='http://bing.com'></iframe></td>
+      <td>
+        <div id='hn_phone_debug'>
+          <div>Twilio Capabilities</div>
+          <select id='hn_capabilities_debug'>
+            <option>none</option>
+            <option>phone out</option>
+            <option>phone in</option>
+            <option>sms out</option>
+            </select>
+          <div>Phone Out Permissions</div>
+          <select id='hn_phone_out_debug'>
+            <option>none</option>
+            <option>fixed dial</option>
+            <option>free dial</option>
+            </select>
+          <div>SMS Out Permissions</div>
+          <select id='hn_sms_out_debug'>
+            <option>none</option>
+            <option>fixed all</option>
+            <option>free message</option>
+            <option>free all</option>
+            </select>
+          <div>Email Permissions</div>
+          <select id='hn_email_debug'>
+            <option>none</option>
+            <option>fixed all</option>
+            <option>free all</option>
+            <option>free body</option>
+            </select>
+          <div>Default Dialling code</div>
+          <select id='hn_prefix_debug'>
+            <option>none</option>
+            <option>gb</option>
+            <option>us</option>
+            </select>
+        </div>
+      </td>
+      <td id='hn_phone_page'>
+        <iframe src='http://example.com'></iframe>
+      </td>
     </tr>
   </table>
 </body>
     <script src="/hypernumbers/jquery-1.7.1.js"></script>
+    <script src="/contacts/hn.phone2.js"></script>
     <script src="/bootstrap/js/bootstrap.js"></script>
     <script src="/bootstrap/js/helper.js"></script>
     <script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>
