--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -35,7 +35,7 @@
           <button class='btn btn-invert hn_phone_control' id='hn_phone_away' data-away='false' disabled>
             Away
           </button>
-          <button class='btn hn_phone_control' id='hn_phone_send_sms' disabled disabled>
+          <button class='btn hn_phone_control' id='hn_phone_sms' data-sms-mode="false" disabled disabled>
             Text
           </button>
         </div>
