--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -67,10 +67,6 @@
           <span class='hn_phone_email_label'>CC:</span>
           <input id='hn_phone_cc' class='hn_phone_email_input' type='text' />
           </div>
-          <div class='clear'>
-          <span class='hn_phone_email_label'>BCC:</span>
-          <input id='hn_phone_bcc' class='hn_phone_email_input' type='text' />
-          </div>
           <input id='hn_phone_subject' class='hn_phone_email_fields' type='text' />
           <textarea id='hn_phone_body' class='hn_phone_email_fields' type='textarea'></textarea>
           <button class='btn btn-success hn_phone_control' id='hn_email_send'>
@@ -121,7 +117,7 @@
   </table>
 </body>
     <script src="/hypernumbers/jquery-1.7.1.js"></script>
-    <script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>
+    <!--<script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>-->
     <script src="/contacts/hn.phone2.js"></script>
     <script src="/bootstrap/js/bootstrap.js"></script>
     <script src="/bootstrap/js/helper.js"></script>
