--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -9,6 +9,8 @@
     </style>
 </head>
 <body>
+  <div id='hn_phone_already_registered'></div>
+  <div id='hn_phone_container'>
   <table>
     <tr>
       <td id='hn_phone_panel'>
@@ -115,6 +117,7 @@
       </td>
     </tr>
   </table>
+  </div>
 </body>
     <script src="/hypernumbers/jquery-1.7.1.js"></script>
     <!--<script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>-->
