changes to the new softphone

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -113,7 +113,7 @@
         </div>
       </td>-->
       <td id='hn_phone_page'>
-        <iframe src='http://example.com'></iframe>
+        <iframe src='https://trial.sugarcrm.com/hfumec6778/index.php?action=Login&module=Users&login_module=Home&login_action=index'></iframe>
       </td>
     </tr>
   </table>
