snagging the new phone in live

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -113,14 +113,14 @@
         </div>
       </td>-->
       <td id='hn_phone_page'>
-        <iframe src='https://trial.sugarcrm.com/hfumec6778/index.php?action=Login&module=Users&login_module=Home&login_action=index'></iframe>
+        <iframe src='http://example.com'></iframe>
       </td>
     </tr>
   </table>
   </div>
 </body>
     <script src="/hypernumbers/jquery-1.7.1.js"></script>
-    <!--<script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>-->
+    <script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>
     <script src="/contacts/hn.phone2.js"></script>
     <script src="/bootstrap/js/bootstrap.js"></script>
     <script src="/bootstrap/js/helper.js"></script>
