added link to contact logs to softphone and fixed key pres bug

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -18,6 +18,11 @@
           <div id='hn_phone_user_name'></div>
           <div id='hn_phone_user_xtn'></div>
           <div id='hn_phone_user_groups'></div>
+          <div>
+            <small>
+              <a href='./_contacts/' target='_contact_log'>Contact Logs</a>
+            </small>
+          </div>
         </div>
         <div id='hn_phone_dialpad'>
         <div id='hn_phone_status' class='hn_phone_display'>Ready</div>
