start putting in a response field in the softphone

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -80,6 +80,7 @@
             Send
           </button>
         </div>
+        <div id='hn-phone-email-response'></div>
       </td>
       <!--<td>
         <div id='hn_phone_debug'>
