--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone2.html
@@ -18,6 +18,7 @@
           <div id='hn_phone_user_name'></div>
           <div id='hn_phone_user_xtn'></div>
           <div id='hn_phone_user_groups'></div>
+          <hr />
           <div>
             <small>
               <a href='./_contacts/' target='_contact_log'>Contact Logs</a>
@@ -63,7 +64,8 @@
         <button class='btn hn_phone' data-button='0' disabled>0</button>
         <button class='btn hn_phone' data-button='comma' disabled>,</button>
         </div>
-        </div>
+         <div id='hn-phone-response'></div>
+       </div>
         <div id='hn_phone_email'>
           <div class='hn_phone_display'>Send Email</div>
           <div>
@@ -79,8 +81,8 @@
           <button class='btn btn-success hn_phone_control' id='hn_email_send'>
             Send
           </button>
+         <div id='hn-email-response'></div>
         </div>
-        <div id='hn-phone-email-response'></div>
       </td>
       <!--<td>
         <div id='hn_phone_debug'>
