put in minification code (mostly)

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -4,15 +4,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>like spreadsheets, but better</title>
-    <link rel="stylesheet" href="/webcomponents/webcomponents.css" />
-    <link rel="stylesheet" href="/webcomponents/webbasic.css" />
-    <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
-    <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
-    <link rel="stylesheet" href="/hypernumbers/finder.css" />
-    <link rel="stylesheet" href="/tblsorter/style.css" />
-    <link rel="stylesheet" href="/tooltip/jquery.tooltip.css" />
+    <link rel="stylesheet" href="spreadsheet.head.css" />
   </head>
-  <script src="/hypernumbers/err.remoterr.js"></script>
+  <script src="spreadsheet.head.js"></script>
   <body id="hn" data-view="spreadsheet">
     <div id="pagemenu" style="background-color:#000;">
     <div id="hn_save_msg"></div>
@@ -907,38 +901,5 @@
     </div>
   </body>
 
-    <script src="/hypernumbers/jquery-1.7.1.js"></script>
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
-<!-- <script src="http://crypto-js.googlecode.com/files/2.0.0-crypto-md5.js"></script> -->
-    <script src="/hypernumbers/jquery-ext.js"></script>
-    <script src="/hypernumbers/json2.min.js"></script>
-    <script src="/hypernumbers/ajaxfileupload.js"></script>
-    <script src="/hypernumbers/hn.js"></script>
-    <script src="/hypernumbers/hn.util.js"></script>
-    <script src="/hypernumbers/hn.hashurl.js"></script>
-    <script src="/hypernumbers/hn.data.js"></script>
-    <script src="/hypernumbers/hn.ui.js"></script>
-    <script src="/hypernumbers/hn.sheet.js"></script>
-    <script src="/hypernumbers/hn.layout.js"></script>
-    <script src="/hypernumbers/hn.layout.panes.js"></script>
-    <script src="/hypernumbers/hn.layout.pane.js"></script>
-    <script src="/hypernumbers/jquery.cookie.min.js"></script>
-    <script src="/hypernumbers/jquery.jstree.js"></script>
-    <script src="/hypernumbers/finder.js"></script>
-    <script src="/hypernumbers/hn.toolbar.js"></script>
-    <script src="/hypernumbers/hn.callbacks.js"></script>
-    <script src="/hypernumbers/hn.sitedata.js"></script>
-    <script src="/hypernumbers/hn.map.js"></script>
-    <script src="/hypernumbers/hn.selection.js"></script>
-    <script src="/hypernumbers/hn.logger.js"></script>
-    <script src="/hypernumbers/jquery.tablesorter.js"></script>
-    <script src="/jscolor/jscolor.js"></script>
-    <script src="/hypernumbers/hn.ui.ctrlpanel.js"></script>
-    <script src="/hypernumbers/hn.ui.pagespanel.js"></script>
-    <script src="/hypernumbers/hn.site.js"></script>
-    <script src="/hypernumbers/hn.dialog.js"></script>
-    <script src="/hypernumbers/hn.userdeffns.js"></script>
-    <script src="/tooltip/jquery.tooltip.min.js"></script>
-    <script src="/hypernumbers/jquery.scrollbarWidth.min.js"></script>
-    <script src="/hypernumbers/hn.main.js"></script>
+    <script src="spreadsheet.body.js"></script>
 </html>
